# QQNT-Database-Export-Tool

./: README.md  main-手动指定群号导出消息.py  main-自动导出全部群聊消息.py  main.py  pyproject.toml  query2orm.py
db/: __init__.py  man.py  man.py.bak  models.py
nt_msg/: contact.py  message.py
